# anistalker

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: anime.rs  config.rs  fs_scan.rs  fs_store.rs  fs_write.rs  main.rs  metadata.rs  server.rs
src/database/: mod.rs
src/metadata/: kitsu.rs  mod.rs  search_result.rs  tv_metadata.rs
